# devllmapp

./: LICENSE  README.md
CH2/2-1/: pyproject.toml
CH2/2-2/huggingface_intro/: hf_pipeline.py  intro.py  pyproject.toml
CH2/2-3/embedding_intro/: ada_embedding.py  hf_embedding.py  pyproject.toml
CH2/2-5/pgvector-docker/: docker-compose.yml
CH2/2-5/pgvector_intro/: models.py  postgre_vector.py  pyproject.toml
CH2/2-6/pinecone_intro/: pinecone_vector.py  pyproject.toml
CH2/2-7/qdrant-docker/: docker-compose.yml
CH2/2-7/qdrant_intro/: pyproject.toml  qdrant_vector.py
CH3/3-7-ch/: chat.jinja2  python_get_weather_status.py
CH3/3-7-en/: chat.jinja2  python_get_weather_status.py
CH4/: 4-2.py  4-3-2.py  4-3.py  4-4.py  4-5.py  4-6-2.py  4-6.py  langchain.db  pyproject.toml
CH5/5-1/Demo2/: WithoutSkSample.sln
CH5/5-3/Demo1/: Program.cs
CH5/5-3/Demo2/: IntroSample.csproj  Program.cs
CH5/5-8/Demo1/: IntroSample.csproj  Program.cs
CH5/5-9/Demo1/: Demo1.sln  IntroSample.csproj  Program.cs
CH5/5-9/Demo2/: IntroSample.csproj  Program.cs
CH5/5-9/Demo3/: IntroSample.csproj  Program.cs
OtherSample/AgentSample/: AgentSample.csproj  AppConfig.cs  BasicAgent.cs  MultiAgent.cs  MultiPluginAgent.cs  MultiRagAgent.cs  Program.cs
OtherSample/AgentSample/Plugins/: DateTimePlugin.cs  RagTrafficLawPlugin.cs  RagWorkerLawPlugin.cs  RoomBookPlugin.cs
OtherSample/Mopcon2024/AgentSample/: AgentSample.csproj  AgentSample.sln  AppConfig.cs  BasicAgent.cs  DelegateAgent.cs  NewsAgent.cs  Program.cs  ReflectionAgent.cs
OtherSample/RagAgentLinebot/: Program.cs  RagAgentLinebot.csproj  RagAgentLinebot.http  RagAgentLinebot.sln  WeatherForecast.cs  appsettings.json
OtherSample/RagAgentLinebot/Controllers/: BotController.cs  WeatherForecastController.cs
OtherSample/RagAgentLinebot/Models/: MultiRagAgent.cs  RagTrafficLawPlugin.cs  RagWorkerLawPlugin.cs
OtherSample/RagAgentLinebot/Properties/: launchSettings.json
OtherSample/autofunfilterSample/: MyConsoleApp.csproj  Program.cs
OtherSample/llama3RAGSample/: IntroSample.csproj  Program.cs  readme copy.md  readme.md
OtherSample/llama3Sample/: IntroSample.csproj  Program.cs
OtherSample/newfiltersSample/: readme.md
OtherSample/newfiltersSample/MyConsoleApp/: MyConsoleApp.csproj  (+1 more)
OtherSample/ollamaEmbeddingSample/: IntroSample.csproj  OllamaEmbeddingGenerator.cs  Program.cs  readme.md
(+71 files in other folders)
