[tool.poetry]
name = "langchain-intro"
version = "0.1.0"
description = ""
authors = ["KoKo Mexcelsa <qqkerk@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
langchain = "^0.1.3"
langchain-openai = "^0.0.3"
beautifulsoup4 = "^4.12.3"
qdrant-client = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
