[tool.poetry]
name = "pgvector-intro"
version = "0.1.0"
description = ""
authors = ["KoKo Mexcelsa <qqkerk@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
openai = "^1.9.0"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
